if (EXTERNAL_MPI4PY)
  set (TEST_ENV "PYTHONPATH=${CMAKE_BINARY_DIR}:$ENV{PYTHONPATH}")
else (EXTERNAL_MPI4PY)
  set (TEST_ENV "PYTHONPATH=${CMAKE_BINARY_DIR}:${CMAKE_BINARY_DIR}/contrib:$ENV{PYTHONPATH}")
endif (EXTERNAL_MPI4PY)

#add_subdirectory(cm_velocity)
#add_subdirectory(ewald)
#add_subdirectory(pickle_potential)
#add_subdirectory(pi_water)
#add_subdirectory(tabulated)
#add_subdirectory(system_test)
#add_subdirectory(minimize_energy)
add_subdirectory(Array4DTest)
#add_subdirectory(fixed_list_types_test)
#add_subdirectory(LangevinThermostat)
#add_subdirectory(AdResS)
#add_subdirectory(thermo_integration)
#add_subdirectory(lattice_boltzmann)
add_subdirectory(ljcos)
#add_subdirectory(rattle)
add_subdirectory(RealNDTest)
#add_subdirectory(FileIOTests)
#add_subdirectory(langevin_thermostat_on_group)
#add_subdirectory(python_tools)
#add_subdirectory(interaction_potentials)
#add_subdirectory(FixedLocalTuple)
#add_subdirectory(langevin_thermostat_on_radius)
#add_subdirectory(DPDThermostat)
#add_subdirectory(constrain_com)
#add_subdirectory(constrain_rg)
#add_subdirectory(ewald)
#add_subdirectory(pickle_potential)
#add_subdirectory(pi_water)
#add_subdirectory(tabulated)
add_subdirectory(free_movement)
#add_subdirectory(polymer_melt)
